[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gust"
version = "0.1.0"
description = "CLI tool for managing NVIDIA AIR Spectrum-X simulations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Marty", email = "marty@insightsoftmax.com"}
]
keywords = ["nvidia", "air", "spectrum-x", "simulation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "air-sdk>=1.0.0",
    "requests>=2.25.0,<3.0.0",
    "pexpect>=4.8.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<7.0.0",
    "black>=22.0.0,<25.0.0",
    "flake8>=5.0.0,<8.0.0",
    "pylint>=2.15.0,<4.0.0",
    "build>=1.0.0,<2.0.0",
]

[project.scripts]
gust = "gust.cli:main"

[project.urls]
Homepage = "https://github.com/blik616287/gust"
Documentation = "https://github.com/blik616287/gust#readme"
Repository = "https://github.com/blik616287/gust"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
gust = ["default_topology.json"]
